--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,23 +23,6 @@
             app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <!-- app:layout_collapseMode 指定当前控件在在CollapsingToolbarLayout折叠过程中的折叠模式
-             parallax 指折叠过程中会产生一定的错位偏移
-             pin 指在折叠过程中位置始终保持不变-->
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin">
-
-                <TextView
-                    android:id="@+id/tv_title_city"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-            </android.support.v7.widget.Toolbar>
-
             <ImageView
                 android:id="@+id/bing_image_view"
                 android:layout_width="match_parent"
@@ -57,7 +40,41 @@
                 app:layout_collapseMode="parallax"
                 layout="@layout/main_now"/>
 
+            <!-- app:layout_collapseMode 指定当前控件在在CollapsingToolbarLayout折叠过程中的折叠模式
+             parallax 指折叠过程中会产生一定的错位偏移
+             pin 指在折叠过程中位置始终保持不变-->
 
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@color/white"
+                app:layout_collapseMode="pin">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:gravity="center"
+                    android:layout_marginTop="15dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/iv_title_image"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:padding="3dp"/>
+
+                    <TextView
+                        android:id="@+id/tv_title_city"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/gray_deep"
+                        android:text="@string/test_text"/>
+
+                </LinearLayout>
+
+
+            </android.support.v7.widget.Toolbar>
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
