--- a/app/src/main/res/layout/main_aqi.xml
+++ b/app/src/main/res/layout/main_aqi.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/ll_air_quality_layout"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -18,9 +19,11 @@
             android:padding="10dp"
             android:text="@string/text_air_quality"
             android:textColor="@color/black"
-            android:textSize="16sp"/>
+            android:textSize="14sp"/>
 
         <TextView
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
             style="@style/vertical_line" />
 
         <TextView
@@ -30,7 +33,7 @@
             android:padding="10dp"
             android:text="@string/test_text"
             android:textColor="@color/translucent"
-            android:textSize="16sp"/>
+            android:textSize="14sp"/>
 
         <TextView
             android:id="@+id/tv_release_time"
@@ -40,81 +43,84 @@
             android:text="@string/test_text"
             android:gravity="end"
             android:textColor="@color/translucent"
-            android:textSize="14sp"/>
+            android:textSize="12sp"/>
 
     </LinearLayout>
 
     <View
         style="@style/horizontal_line" />
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:orientation="vertical"
         android:layout_marginBottom="10dp">
 
         <!--*************** AQI 指数 ***************-->
         <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+
+            <com.kxwon.bingweather.ui.widget.ColorArcProgressBar
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:id="@+id/cap_bar_aqi"
+                android:layout_centerInParent="true"
+                app:is_need_content="true"
+                app:front_color1="#00ff00"
+                app:front_color2="#ffff00"
+                app:max_value="300"
+                app:back_width="8dp"
+                app:front_width="8dp"
+                app:total_engle="270"
+                app:is_need_unit="true"
+                app:is_need_title="false"
+                app:string_unit="@string/text_aqi"
+                app:back_color="@android:color/darker_gray" />
+
+
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_centerInParent="true">
-
-                <TextView
-                    android:id="@+id/tv_aqi"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:textColor="@color/black"
-                    android:padding="5dp"
-                    android:textSize="40sp"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="@string/text_aqi"
-                    android:textColor="@color/black"/>
-
-            </LinearLayout>
+                android:text="@string/text_aqi_des"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:textSize="13sp"
+                android:textColor="@color/black"/>
 
         </RelativeLayout>
 
         <!--*************** PM2.5 指数 **************-->
         <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <com.kxwon.bingweather.ui.widget.ColorArcProgressBar
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:id="@+id/cap_bar_pm25"
+                android:layout_centerInParent="true"
+                app:is_need_content="true"
+                app:front_color1="#00ff00"
+                app:front_color2="#ffff00"
+                app:max_value="250"
+                app:back_width="8dp"
+                app:front_width="8dp"
+                app:total_engle="270"
+                app:is_need_unit="true"
+                app:is_need_title="false"
+                app:string_unit="@string/text_pm25"
+                app:back_color="@android:color/darker_gray" />
+
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_centerInParent="true">
-
-                <TextView
-                    android:id="@+id/tv_pm25"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:textColor="@color/black"
-                    android:padding="5dp"
-                    android:textSize="40sp"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="@string/text_pm25"
-                    android:textColor="@color/black"/>
-
-            </LinearLayout>
+                android:textSize="13sp"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:text="@string/text_pm25_des"
+                android:textColor="@color/black"/>
 
         </RelativeLayout>
 
@@ -128,7 +134,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/text_air_quality_detail"
-        android:padding="10dp"
+        android:padding="15dp"
+        android:textSize="13sp"
         android:textColor="@color/translucent"/>
 
     <View
