--- a/app/src/main/res/layout/main_forecast_day.xml
+++ b/app/src/main/res/layout/main_forecast_day.xml
@@ -7,14 +7,14 @@
 
     <!--***************** 未来几天天气信息 ****************-->
     <LinearLayout
-        android:id="@+id/ll_forecast_layout"
+        android:id="@+id/ll_forecast_day_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
     </LinearLayout>
 
-    <View
+    <TextView
         style="@style/horizontal_line" />
 
     <TextView
@@ -22,7 +22,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/text_forecast_day"
-        android:padding="10dp"
+        android:padding="15dp"
+        android:textSize="13sp"
         android:textColor="@color/translucent"/>
 
     <View
