--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,24 +30,32 @@
 
     <!-- 分隔竖线 -->
     <style name="vertical_line" >
-        <item name="android:layout_width">0.5dp</item>              d
+        <item name="android:layout_width">1dp</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_marginTop">10dp</item>
         <item name="android:layout_marginBottom">10dp</item>
         <item name="android:background">@color/translucent</item>
     </style>
+    <!-- 分隔竖线 -->
+    <style name="vertical_line_white" >
+        <item name="android:layout_width">1dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:background">@color/white</item>
+    </style>
 
 
     <!-- ***************** 生活建议 ****************-->
     <style name="suggestion_text_title" >
-        <item name="android:layout_width">wrap_content</item>              d
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:padding">10dp</item>
     </style>
     <style name="suggestion_horizontal_layout" >
-        <item name="android:layout_width">match_parent</item>              d
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:orientation">horizontal</item>
         <item name="android:gravity">center_vertical</item>
@@ -67,22 +75,23 @@
         <item name="android:gravity">center_vertical</item>
     </style>
     <style name="suggestion_text_view_big" >
-        <item name="android:layout_width">wrap_content</item>              d
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">14sp</item>
         <item name="android:padding">1dp</item>
     </style>
     <style name="suggestion_text_view_small" >
-        <item name="android:layout_width">wrap_content</item>              d
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/translucent</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">12sp</item>
         <item name="android:padding">1dp</item>
     </style>
     <style name="suggestion_image_small" >
         <item name="android:layout_width">20dp</item>
         <item name="android:layout_height">20dp</item>
+        <item name="android:src">@mipmap/bg_go</item>
     </style>
 
 
