新增语音播报天气、下拉刷新、分享

--- a/app/src/main/res/layout/main_title.xml
+++ b/app/src/main/res/layout/main_title.xml
@@ -46,6 +46,13 @@
                 android:textColor="@color/white"
                 android:textSize="15sp"/>
 
+            <ImageView
+                android:id="@+id/iv_speak_weather"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:padding="4dp"
+                android:src="@mipmap/bg_speak"/>
+
         </LinearLayout>
 
     </LinearLayout>
