--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,116 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!--******************* 标题栏的界面 ****************-->
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appBar"
+    <com.liaoinstan.springview.widget.SpringView
+        android:id="@+id/spring_view"
         android:layout_width="match_parent"
-        android:layout_height="300dp">
+        android:layout_height="match_parent">
 
-        <!-- android:theme 指定主题
-        app:contentScrim 指定CollapsingToolbarLayout在趋于折叠以及折叠之后的背景色
-        exitUntilCollapsed 指CollapsingToolbarLayout随着滚动完成折叠后就保留在界面上，不再移出界面-->
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar"
+        <android.support.design.widget.CoordinatorLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/bing_image_view"
+            <!--******************* 标题栏的界面 ****************-->
+            <android.support.design.widget.AppBarLayout
+                android:id="@+id/appBar"
+                android:layout_width="match_parent"
+                android:layout_height="300dp">
+
+                <!-- android:theme 指定主题
+                app:contentScrim 指定CollapsingToolbarLayout在趋于折叠以及折叠之后的背景色
+                exitUntilCollapsed 指CollapsingToolbarLayout随着滚动完成折叠后就保留在界面上，不再移出界面-->
+                <android.support.design.widget.CollapsingToolbarLayout
+                    android:id="@+id/collapsing_toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                    app:contentScrim="?attr/colorPrimary"
+                    app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
+                    app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+                    <ImageView
+                        android:id="@+id/bing_image_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        app:layout_collapseMode="parallax" />
+
+                    <!--****** 头部 *********-->
+                    <include
+                        app:layout_collapseMode="parallax"
+                        layout="@layout/main_title"/>
+
+                    <!--****** 天气详情 *********-->
+                    <include
+                        app:layout_collapseMode="parallax"
+                        layout="@layout/main_now"/>
+
+                    <!-- app:layout_collapseMode 指定当前控件在在CollapsingToolbarLayout折叠过程中的折叠模式
+                     parallax 指折叠过程中会产生一定的错位偏移
+                     pin 指在折叠过程中位置始终保持不变-->
+
+                    <android.support.v7.widget.Toolbar
+                        android:id="@+id/toolbar"
+                        android:layout_width="match_parent"
+                        android:layout_height="?attr/actionBarSize"
+                        android:background="@color/white"
+                        app:layout_collapseMode="pin">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="?attr/actionBarSize"
+                            android:gravity="center"
+                            android:layout_marginTop="15dp"
+                            android:orientation="horizontal">
+
+                            <ImageView
+                                android:id="@+id/iv_title_image"
+                                android:layout_width="32dp"
+                                android:layout_height="32dp"
+                                android:padding="3dp"/>
+
+                            <TextView
+                                android:id="@+id/tv_title_city"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/gray_deep"
+                                android:text="@string/test_text"/>
+
+                        </LinearLayout>
+
+
+                    </android.support.v7.widget.Toolbar>
+
+                </android.support.design.widget.CollapsingToolbarLayout>
+
+            </android.support.design.widget.AppBarLayout>
+
+            <!--******************* 天气的其他内容 ****************-->
+            <!--NestedScrollView 在 ScrollView 基础上增加了嵌套响应滚动事件的功能，内部只能放一个直接子布局 -->
+            <android.support.v4.widget.NestedScrollView
+                android:id="@+id/nsv_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax" />
-
-            <!--****** 头部 *********-->
-            <include
-                app:layout_collapseMode="parallax"
-                layout="@layout/main_title"/>
-
-            <!--****** 天气详情 *********-->
-            <include
-                app:layout_collapseMode="parallax"
-                layout="@layout/main_now"/>
-
-            <!-- app:layout_collapseMode 指定当前控件在在CollapsingToolbarLayout折叠过程中的折叠模式
-             parallax 指折叠过程中会产生一定的错位偏移
-             pin 指在折叠过程中位置始终保持不变-->
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="@color/white"
-                app:layout_collapseMode="pin">
+                android:scrollbars="none"
+                android:overScrollMode="never"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:gravity="center"
-                    android:layout_marginTop="15dp"
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-                    <ImageView
-                        android:id="@+id/iv_title_image"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
-                        android:padding="3dp"/>
+                    <!--****** 未来天气信息 *********-->
+                    <include layout="@layout/main_forecast_day"/>
+                    <include layout="@layout/main_forecast_hour"/>
 
-                    <TextView
-                        android:id="@+id/tv_title_city"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/gray_deep"
-                        android:text="@string/test_text"/>
+                    <!--****** 空气质量信息 *********-->
+                    <include layout="@layout/main_aqi"/>
+
+                    <!--****** 生活建议信息 *********-->
+                    <include layout="@layout/main_suggestion"/>
+
+                    <!--****** 底部 *********-->
+                    <include layout="@layout/main_bottom"/>
 
                 </LinearLayout>
 
-
-            </android.support.v7.widget.Toolbar>
-
-        </android.support.design.widget.CollapsingToolbarLayout>
-
-    </android.support.design.widget.AppBarLayout>
-
-    <!--******************* 天气的其他内容 ****************-->
-    <!--NestedScrollView 在 ScrollView 基础上增加了嵌套响应滚动事件的功能，内部只能放一个直接子布局 -->
-    <android.support.v4.widget.NestedScrollView
-        android:id="@+id/nsv_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="none"
-        android:overScrollMode="never"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <!--****** 未来天气信息 *********-->
-            <include layout="@layout/main_forecast_day"/>
-            <include layout="@layout/main_forecast_hour"/>
-
-            <!--****** 空气质量信息 *********-->
-            <include layout="@layout/main_aqi"/>
-
-            <!--****** 生活建议信息 *********-->
-            <include layout="@layout/main_suggestion"/>
-
-            <!--****** 底部 *********-->
-            <include layout="@layout/main_bottom"/>
-
-        </LinearLayout>
-
-    </android.support.v4.widget.NestedScrollView>
+            </android.support.v4.widget.NestedScrollView>
 
 
-</android.support.design.widget.CoordinatorLayout>
+        </android.support.design.widget.CoordinatorLayout>
+
+    </com.liaoinstan.springview.widget.SpringView>
+
+
+</FrameLayout>
+
