--- a/app/src/main/res/layout/main_forecast_hour.xml
+++ b/app/src/main/res/layout/main_forecast_hour.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ll_forecast_hour_layout"
     android:orientation="vertical"
+    android:visibility="gone"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white">
